<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30sp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35sp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:minHeight="@dimen/action_bar_min_height"
            android:padding="0sp"
            app:contentInsetStart="0sp"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/title_icon_size"
                    android:layout_height="@dimen/title_icon_size"
                    android:minHeight="@dimen/title_icon_size"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toStartOf="@+id/title_text_view"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@mipmap/ic_genpass_foreground" />

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/light_mode_blue"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingStart="20sp"
            android:paddingTop="0sp"
            android:paddingEnd="20sp"
            android:paddingBottom="0sp"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/password_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar" />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/ic_reset"
            android:foregroundGravity="center"
            android:isScrollContainer="false"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/generate_button"
            app:layout_constraintEnd_toStartOf="@+id/generate_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/generate_button"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/ic_password"
            android:foregroundGravity="center"
            android:foregroundTint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_bar"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60sp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/ic_copy"
            android:foregroundGravity="center"
            android:foregroundTint="?attr/colorOnSecondary"
            android:maxWidth="@dimen/button_max_width"
            app:layout_constraintBottom_toBottomOf="@+id/generate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toEndOf="@+id/generate_button"
            app:layout_constraintTop_toTopOf="@+id/generate_button"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/options_layout"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:layout_marginTop="70sp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text">

            <Switch
                android:id="@+id/lowercase_letters_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/options_spacing"
                android:minHeight="30sp"
                android:text="@string/lowercase_option"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/uppercase_letters_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/options_spacing"
                android:minHeight="30sp"
                android:text="@string/uppercase_option"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/numbers_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/options_spacing"
                android:minHeight="30sp"
                android:text="@string/number_option"
                tools:ignore="TouchTargetSizeCheck" />

            <Switch
                android:id="@+id/symbols_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/options_spacing"
                android:minHeight="30sp"
                android:text="@string/symbol_option"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/length_bar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:max="100"
            android:minWidth="260sp"
            android:progress="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_label_text_view" />

        <TextView
            android:id="@+id/length_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/length_label_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.050"
            app:layout_constraintStart_toEndOf="@+id/length_label_text_view"
            app:layout_constraintTop_toTopOf="@+id/length_label_text_view"
            app:layout_constraintVertical_bias="0.500" />

        <TextView
            android:id="@+id/length_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/length_text_view"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/options_layout" />

        <TextView
            android:id="@+id/reset_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_spacing"
            android:labelFor="@id/reset_button"
            android:text="@string/reset_button_text"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/reset_button"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="@+id/reset_button"
            app:layout_constraintTop_toBottomOf="@+id/reset_button" />

        <TextView
            android:id="@+id/generate_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_spacing"
            android:text="@string/generate_button_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/generate_button"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="@+id/generate_button"
            app:layout_constraintTop_toBottomOf="@+id/generate_button" />

        <TextView
            android:id="@+id/copy_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_spacing"
            android:text="@string/copy_button_text"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/copy_button"
            app:layout_constraintStart_toStartOf="@+id/copy_button"
            app:layout_constraintTop_toBottomOf="@+id/copy_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>